[tool.poetry]
name = "Advent of Code"
version = "0.1.0"
description = "Solutions for the programming puzzles in Advent of Code 2021."
authors = ["Lukas Novotny <lk.novotny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
